--- a/index.html
+++ b/index.html
@@ -3,101 +3,123 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A Surprise for My Rose</title>
+    <title>For My Only Rose</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+
         :root {
-            --bg-color: #fff0f3;
-            --box-color: #ff4d6d;
-            --ribbon-color: #c9184a;
+            --bg-deep: #900c3f;
+            --pink-glow: #ff4d6d;
+            --gold: #ffd700;
         }
 
         body {
             margin: 0; padding: 0;
             display: flex; justify-content: center; align-items: center;
-            height: 100vh; background-color: var(--bg-color);
-            font-family: 'Arial', sans-serif; overflow: hidden; text-align: center;
+            height: 100vh;
+            background: radial-gradient(circle, #ff4d6d 0%, #900c3f 100%);
+            font-family: 'Great Vibes', cursive;
+            overflow: hidden;
+            text-align: center;
         }
 
-        .container { position: relative; cursor: pointer; z-index: 10; }
+        /* Video Background Particles Effect */
+        #canvas {
+            position: absolute;
+            top: 0; left: 0;
+            width: 100%; height: 100%;
+            pointer-events: none;
+        }
 
-        /* Gift Box */
+        .container { position: relative; cursor: pointer; z-index: 10; transition: transform 0.3s; }
+        .container:active { transform: scale(0.95); }
+
+        /* Cinematic Gift Box */
         .gift-box {
-            position: relative; width: 140px; height: 140px;
-            background-color: var(--box-color); border-radius: 0 0 5px 5px;
+            position: relative; width: 160px; height: 140px;
+            background: #b91d1d;
+            border-radius: 0 0 8px 8px;
+            box-shadow: 0 20px 40px rgba(0,0,0,0.4);
         }
-        .gift-box::after {
-            content: ''; position: absolute; width: 25px; height: 100%;
-            background: var(--ribbon-color); left: 50%; transform: translateX(-50%);
+        .gift-box::after { /* Gold Ribbon */
+            content: ''; position: absolute; width: 35px; height: 100%;
+            background: linear-gradient(to bottom, #ffd700, #b8860b);
+            left: 50%; transform: translateX(-50%);
         }
 
         .lid {
-            position: absolute; width: 160px; height: 35px;
-            background-color: var(--box-color); top: -35px; left: -10px;
-            z-index: 11; transition: all 0.7s ease; border-radius: 5px;
+            position: absolute; width: 180px; height: 40px;
+            background: #b91d1d; top: -40px; left: -10px;
+            z-index: 11; transition: all 1s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+            border-radius: 5px;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.3);
         }
-        .lid::after {
-            content: ''; position: absolute; width: 25px; height: 100%;
-            background: var(--ribbon-color); left: 50%; transform: translateX(-50%);
+        .lid::after { /* Lid Ribbon */
+            content: ''; position: absolute; width: 35px; height: 100%;
+            background: linear-gradient(to right, #ffd700, #b8860b);
+            left: 50%; transform: translateX(-50%);
         }
 
-        /* Bouquet */
+        /* The Bouquet (Video Style) */
         .bouquet {
-            position: absolute; top: 10px; left: 50%;
-            transform: translateX(-50%) scale(0); font-size: 70px;
-            transition: all 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            position: absolute; top: 0; left: 50%;
+            transform: translateX(-50%) scale(0);
+            font-size: 90px;
+            transition: all 1.2s ease-out;
             z-index: 5;
+            filter: drop-shadow(0 0 15px gold);
         }
 
-        /* Animations */
-        .container.open .lid { transform: translateY(-100px) rotate(-15deg); opacity: 0; }
-        .container.open .bouquet { transform: translateX(-50%) scale(1.5) translateY(-130px); }
-        .container.open .message { opacity: 1; transform: translateX(-50%) translateY(0); }
-
+        /* Glowing Text */
         .message {
-            position: absolute; bottom: -120px; left: 50%;
-            transform: translateX(-50%) translateY(20px);
-            width: 280px; opacity: 0; transition: all 0.8s ease;
+            position: absolute; top: -220px; left: 50%;
+            transform: translateX(-50%);
+            width: 350px; opacity: 0; transition: all 1.5s ease;
         }
-        .message h1 { color: var(--ribbon-color); margin: 0; font-size: 1.5rem; }
-        .message p { color: #590d22; font-style: italic; font-size: 1rem; }
+        .message h1 {
+            color: var(--gold);
+            font-size: 4rem;
+            margin: 0;
+            text-shadow: 0 0 10px #ffd700, 0 0 20px #ffd700;
+        }
+        .message p {
+            color: #fff;
+            font-family: 'Arial', sans-serif;
+            font-style: italic;
+            font-size: 1.1rem;
+            letter-spacing: 1px;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+        }
 
-        /* Petals */
-        .petal {
-            position: absolute; background: #ff758f; border-radius: 150% 0 150% 0;
-            animation: drift linear infinite; pointer-events: none;
-        }
-        @keyframes drift {
-            0% { transform: translateY(-10vh) rotate(0deg); opacity: 1; }
-            100% { transform: translateY(110vh) rotate(360deg); opacity: 0; }
-        }
+        /* Interaction State */
+        .container.open .lid { transform: translateY(-150px) rotate(-20deg); opacity: 0; }
+        .container.open .bouquet { transform: translateX(-50%) scale(1.3) translateY(-160px); }
+        .container.open .message { opacity: 1; top: -300px; }
 
-        #status { position: fixed; top: 10px; font-size: 12px; color: #ffb7c5; }
-        #player-container { position: absolute; visibility: hidden; pointer-events: none; }
+        #player { display: none; }
     </style>
 </head>
 <body>
 
-    <div id="status">Loading your surprise...</div>
+    <canvas id="canvas"></canvas>
 
-    <div class="container" onclick="handleTap()">
-        <div class="bouquet">🌹💐🌹</div>
+    <div class="container" onclick="openSurprise()">
+        <div class="bouquet">💐</div>
         <div class="lid"></div>
         <div class="gift-box"></div>
         <div class="message">
-            <h1>Happy Rose Day!</h1>
+            <h1>Happy Rose Day</h1>
             <p>“Even miles apart, you are the only rose in my heart”</p>
         </div>
     </div>
 
-    <div id="player-container">
-        <div id="player"></div>
-    </div>
+    <div id="player"></div>
 
     <script>
         let opened = false;
         let player;
 
-        // Load YouTube API
+        // YouTube API for "Jaan Ban Gaye"
         var tag = document.createElement('script');
         tag.src = "https://www.youtube.com/iframe_api";
         var firstScriptTag = document.getElementsByTagName('script')[0];
@@ -105,49 +127,52 @@
 
         function onYouTubeIframeAPIReady() {
             player = new YT.Player('player', {
-                height: '1', width: '1',
+                height: '0', width: '0',
                 videoId: 'a6cJAFFQn_I',
-                playerVars: { 
-                    'autoplay': 0, 
-                    'controls': 0, 
-                    'playsinline': 1 // Crucial for mobile
-                },
-                events: {
-                    'onReady': () => { document.getElementById('status').innerText = "Tap the box!"; }
-                }
+                playerVars: { 'autoplay': 0, 'controls': 0, 'playsinline': 1 }
             });
         }
 
-        function handleTap() {
+        function openSurprise() {
             if (!opened) {
-                // Animation
                 document.querySelector('.container').classList.add('open');
-                document.getElementById('status').style.display = 'none';
-                
-                // Audio - Try to play immediately on click
-                if (player && player.playVideo) {
-                    player.playVideo();
-                }
-
-                // Effects
-                createPetals();
+                if (player && player.playVideo) player.playVideo();
+                startGlitter();
                 opened = true;
             }
         }
 
-        function createPetals() {
-            for (let i = 0; i < 25; i++) {
-                setTimeout(() => {
-                    const p = document.createElement('div');
-                    p.className = 'petal';
-                    p.style.left = Math.random() * 100 + 'vw';
-                    const size = Math.random() * 15 + 10;
-                    p.style.width = size + 'px';
-                    p.style.height = size + 'px';
-                    p.style.animationDuration = Math.random() * 3 + 2 + 's';
-                    document.body.appendChild(p);
-                }, i * 150);
+        // Golden Glitter Background Effect
+        const canvas = document.getElementById('canvas');
+        const ctx = canvas.getContext('2d');
+        let particles = [];
+
+        function startGlitter() {
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
+            for(let i = 0; i < 100; i++) {
+                particles.push({
+                    x: Math.random() * canvas.width,
+                    y: Math.random() * canvas.height,
+                    size: Math.random() * 3 + 1,
+                    speed: Math.random() * 2 + 0.5,
+                    opacity: Math.random()
+                });
             }
+            animate();
+        }
+
+        function animate() {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            particles.forEach(p => {
+                ctx.fillStyle = `rgba(255, 215, 0, ${p.opacity})`;
+                ctx.beginPath();
+                ctx.arc(p.x, p.y, p.size, 0, Math.PI * 2);
+                ctx.fill();
+                p.y += p.speed;
+                if (p.y > canvas.height) p.y = -10;
+            });
+            requestAnimationFrame(animate);
         }
     </script>
 </body>
